--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,22 @@
-table,
-input,
-label {
-  font-size: 1.2rem;
-  font-family: monospace;
-  margin-bottom: 0.5rem;
+body {
+  font-family: Roboto, sans-serif;
+  margin: 2rem;
 }
 
-td {
-  padding: 0.3rem;
+.container {
+  max-width: 300px;
+  margin: 0 auto;
 }
 
-th {
-  padding-right: 1rem;
-  text-align: left;
+.anime {
+  opacity: 0;
+  transform: translateX(-10px);
+  animation: anime 0.3s forwards;
 }
 
-tr:nth-child(even) {
-  background: #eee;
-}
-
-input[type='number'] {
-  display: block;
+@keyframes anime {
+  to {
+    transform: initial;
+    opacity: 1;
+  }
 }
